[package]
name = "block_allocator"
version = "0.1.0"
description = "Thread-safe, fixed-size allocator that serves re-usable blocks"
repository = "github.com/rrichardson/block_alloc"
homepage = "github.com/rrichardson/block_alloc"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
license-file = "LICENSE"

[dependencies]
mmap = "*"
