[package]
name = "block_allocator"
version = "0.2.2"
description = "Thread-safe, fixed-size allocator that serves re-usable blocks"
repository = "https://github.com/rrichardson/block_alloc"
homepage = "https://github.com/rrichardson/block_alloc"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
license-file = "LICENSE"

[dependencies]
memmap = "~0.4"
